WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39368
Fix warnings seen on the buildbots today
https://bugs.webkit.org/show_bug.cgi?id=39368
Summary
Fix warnings seen on the buildbots today
Darin Adler
Reported
2010-05-19 11:45:29 PDT
Fix warnings seen on the buildbots today
Attachments
Patch
(16.42 KB, patch)
2010-05-19 11:52 PDT
,
Darin Adler
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-05-19 11:52:12 PDT
Created
attachment 56506
[details]
Patch
WebKit Review Bot
Comment 2
2010-05-19 11:53:12 PDT
Attachment 56506
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/graphics/gtk/ImageGtk.cpp:161: Use 0 instead of NULL. [readability/null] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2010-05-19 11:58:19 PDT
(In reply to
comment #2
)
> If any of these errors are false positives, please file a bug against check-webkit-style.
Filed
bug 39372
.
Eric Seidel (no email)
Comment 4
2010-05-20 00:43:04 PDT
Comment on
attachment 56506
[details]
Patch Yay! Thanks.
Darin Adler
Comment 5
2010-05-20 15:18:07 PDT
Committed
r59868
: <
http://trac.webkit.org/changeset/59868
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug