WebCore/platform/win/WebCoreInstanceHandle.h
@@ -30,11 +30,11 @@ typedef struct HINSTANCE__* HINSTANCE;
 
 namespace WebCore {
 
-    // The global DLL or application instance used for all windows.
-    extern HINSTANCE s_instanceHandle;
+// The global DLL or application instance used for all windows.
+extern HINSTANCE s_instanceHandle;
 
-    static void setInstanceHandle(HINSTANCE instanceHandle) { s_instanceHandle = instanceHandle; }
-    static HINSTANCE instanceHandle() { return s_instanceHandle; }
+inline void setInstanceHandle(HINSTANCE instanceHandle) { s_instanceHandle = instanceHandle; }
+inline HINSTANCE instanceHandle() { return s_instanceHandle; }
     
 }
 
